index: Resolve old redirect urls
* GitHub and Google HTTPS
* wiki.github.com/project -> github.com/project/wiki
* Don't hardcode "/tree/master"

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,10 +8,10 @@
 
 <div id="content">
 
-	<p class="download link"><strong><a href="http://github.com/jquery/sizzle/zipball/master">Download .zip file</a></strong></p>
-	<p class="doc link"><a href="http://wiki.github.com/jquery/sizzle">Documentation</a></p>
-	<p class="github link"><a href="http://github.com/jquery/sizzle/tree/master">Github project (source code)</a></p>
-	<p class="group link"><a href="http://groups.google.com/group/sizzlejs">Sizzle discussion group</a></p>
+	<p class="download link"><strong><a href="https://github.com/jquery/sizzle/zipball/master">Download .zip file</a></strong></p>
+	<p class="doc link"><a href="https://github.com/jquery/sizzle/wiki">Documentation</a></p>
+	<p class="github link"><a href="https://github.com/jquery/sizzle">Github project (source code)</a></p>
+	<p class="group link"><a href="https://groups.google.com/group/sizzlejs">Sizzle discussion group</a></p>
 
 	<div class="features">
 		<div class="col3-1">
